# Osmium

./: .gitignore  Dockerfile  README.md  docker-compose.yml
osmium/: clean.sh  dune-project  makefile  osmium.opam
osmium/lib/: dune
osmium/test/: dune
src/: makefile  test.ml
src/Algorithme-Complexite-main/compression/: dune-project
src/Algorithme-Complexite-main/compression/test/: dune
src/lib/: dune
