(lang dune 3.14)

(name osmium)

(generate_opam_files true)

(source
 (github Maxime-Cllt/Osmium))

(authors "Maxime Colliat & Rahman Yimaz")

(maintainers "Maxime Colliat <")

(license MIT)

(documentation https://github.com/Maxime-Cllt/Osmium)

(package
 (name osmium)
 (synopsis "SVD and GSVD in OCaml")
 (description "Osmium is a library for Singular Value Decomposition (SVD) in OCaml.")
 (depends ocaml dune)
 (tags
  (math linear-algebra svd gsvd ocaml)))

; See the complete stanza docs at https://github.com/Maxime-Cllt/Osmium
